# smol_hiking_advisor

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  Taskfile.yml  agent.py  app.py  config.py  main.py  models.ini  pyproject.toml  skills-lock.json  user_preferences.py
.agents/skills/deepeval/templates/: test_multi_turn_e2e.py  test_single_turn_no_tracing.py  test_single_turn_tracing.py
.github/workflows/: ci.yml
.opencode/skills/prepare-pr/: SKILL.md
app/: agent.py  app.py  config.py  constants.py  response_parser.py  runtime.py
app/models/: judge_llm.py  tool_calling_model.py  tool_serialization.py
app/skills/: __init__.py  loader.py
app/skills/trail-safety/: SKILL.md
app/skills/weather-interpretation/: SKILL.md
app/tools/: hiker_profile.py  weather.py
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
tests/: test_agent.py  test_config.py  test_user_preferences.py
tests/evals/: metrics.py  test_agent.py
tests/unit/: test_agent.py  test_config.py  test_hiker_profile.py  test_response_parser.py  test_runtime.py  test_skills.py  test_tool_serialization.py  test_user_preferences.py  test_weather.py
tools/: download-models.py
